--- a/app/src/main/res/layout/activity_height_screen.xml
+++ b/app/src/main/res/layout/activity_height_screen.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_weight="0.1"
         android:orientation="horizontal">
 
         <TextView
@@ -23,8 +24,7 @@
             android:layout_weight="1"
             android:background="@color/orange4"
             android:gravity="center"
-            android:padding="@dimen/pad5"
-            android:text="Height Scale"
+            android:text="Height"
             android:textColor="@color/white"
             android:textSize="22sp" />
 
@@ -37,10 +37,10 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
-            android:text="Weight Scale"
+            android:text="Weight"
             android:textColor="@color/white"
             android:textSize="22sp" />
+
 
         <TextView
             android:id="@+id/tv_header_pulseoximeter"
@@ -65,7 +65,6 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="BP Monitor"
             android:textColor="@color/white"
             android:textSize="22sp" />
@@ -79,7 +78,6 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="Temperature"
             android:textColor="@color/white"
             android:textSize="22sp" />
@@ -98,9 +96,8 @@
             android:textColor="@color/white"
             android:textSize="22sp" />
 
-
         <TextView
-            android:id="@+id/tv_header_bloodsugar"
+            android:id="@+id/tv_header_sugar"
             android:layout_width="0dip"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -108,8 +105,7 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
-            android:text="Blood Sugar"
+            android:text="Sugar"
             android:textColor="@color/white"
             android:textSize="22sp" />
 
@@ -122,7 +118,6 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="Hemoglobin"
             android:textColor="@color/white"
             android:textSize="22sp" />
@@ -140,7 +135,7 @@
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
             android:layout_weight="1"
@@ -152,7 +147,7 @@
         <TextView
             android:id="@+id/tv_age"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
             android:layout_weight="1"
@@ -164,7 +159,7 @@
         <TextView
             android:id="@+id/tv_gender"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
             android:layout_weight="1"
@@ -176,7 +171,7 @@
         <TextView
             android:id="@+id/tv_mobile_number"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
             android:layout_weight="1"
@@ -184,7 +179,6 @@
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="22sp" />
-
 
     </LinearLayout>
 
@@ -224,11 +218,11 @@
             <Button
                 android:id="@+id/btn_connect"
                 android:layout_width="150dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_alignParentRight="true"
                 android:layout_margin="5dp"
                 android:background="@drawable/repeat"
-                android:padding="@dimen/pad15"
+                android:padding="@dimen/pad5"
                 android:text="Connecting..."
                 android:textColor="@color/white" />
 
@@ -290,12 +284,12 @@
             <Button
                 android:id="@+id/btn_get_height"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:background="@drawable/repeat"
                 android:text="Get Height"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="22sp" />
+                android:textSize="18sp" />
 
             <Button
                 android:id="@+id/btn_clean"
@@ -314,15 +308,14 @@
     <Button
         android:id="@+id/btn_skip"
         android:layout_width="650dp"
-        android:layout_height="15dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
-        android:layout_weight=".6"
+        android:layout_weight=".1"
         android:background="@drawable/repeat"
         android:baselineAligned="false"
         android:text="NEXT"
         android:textColor="@color/white"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+        android:textSize="22sp" />
 
 </LinearLayout>
