--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,47 +20,44 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="center"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tv_header_height"
                     android:layout_width="0dip"
-                    android:layout_weight="1"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
-                    android:text="Height Scale"
+                    android:text="Height"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/tv_header_weight"
                     android:layout_width="0dip"
-                    android:layout_weight="1"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
-                    android:text="Weight Scale"
+                    android:text="Weight"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/tv_header_pulseoximeter"
                     android:layout_width="0dip"
-                    android:layout_weight="1.5"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1.5"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
                     android:text="Pulse Oximeter"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
@@ -68,13 +65,12 @@
                 <TextView
                     android:id="@+id/tv_header_bloodpressure"
                     android:layout_width="0dip"
-                    android:layout_weight="1"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
                     android:text="BP Monitor"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
@@ -82,13 +78,12 @@
                 <TextView
                     android:id="@+id/tv_header_tempreture"
                     android:layout_width="0dip"
-                    android:layout_weight="1"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
                     android:text="Temperature"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
@@ -108,33 +103,32 @@
                     android:textColor="@color/white"
                     android:textSize="22sp" />
 
+
                 <TextView
-                    android:id="@+id/tv_header_bloodsugar"
+                    android:id="@+id/tv_header_sugar"
                     android:layout_width="0dip"
-                    android:layout_weight="1"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad5"
-                    android:background="@color/orange4"
+                    android:layout_weight="1"
+                    android:background="@drawable/repeat_orange"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
-                    android:text="Blood Sugar"
+                    android:text="Sugar"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/tv_header_hemoglobin"
                     android:layout_width="0dip"
-                    android:layout_weight="1"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
                     android:text="Hemoglobin"
                     android:textColor="@color/white"
-                    android:textSize="18sp" />
+                    android:textSize="22sp" />
 
             </LinearLayout>
 
@@ -142,6 +136,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="4">
@@ -149,57 +144,57 @@
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad10"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
-                    android:text="Name : Ashok Songara"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_age"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad10"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
-                    android:text="Age : 24"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_gender"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad10"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
-                    android:text="Gender : Male"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_mobile_number"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad10"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
-                    android:text="Phone : 7984507908"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
-
+                    android:textSize="18sp" />
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@drawable/line" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -259,7 +254,7 @@
                         <TextView
                             android:id="@+id/tv_connection_status"
                             android:layout_width="150dp"
-                            android:layout_height="50dp"
+                            android:layout_height="40dp"
                             android:layout_alignParentRight="true"
                             android:layout_margin="5dp"
                             android:layout_weight="0"
@@ -363,26 +358,24 @@
                             <Button
                                 android:id="@+id/btn_start_test"
                                 android:layout_width="match_parent"
-                                android:layout_height="50dp"
+                                android:layout_height="40dp"
                                 android:layout_margin="10dp"
                                 android:layout_weight="1"
                                 android:background="@drawable/grayback"
                                 android:text="@string/starttest"
                                 android:textColor="@color/white"
-                                android:textSize="25sp"
-                                android:textStyle="bold" />
+                                android:textSize="22sp" />
 
                             <Button
                                 android:id="@+id/btn_skip"
                                 android:layout_width="match_parent"
-                                android:layout_height="50dp"
+                                android:layout_height="40dp"
                                 android:layout_margin="10dp"
                                 android:layout_weight="1"
                                 android:background="@drawable/greenback"
                                 android:text="Skip Test"
                                 android:textColor="@color/white"
-                                android:textSize="25sp"
-                                android:textStyle="bold" />
+                                android:textSize="22sp" />
                         </LinearLayout>
 
                         <LinearLayout
