--- a/app/src/main/res/layout/activity_main_temperature.xml
+++ b/app/src/main/res/layout/activity_main_temperature.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_weight="0.1"
         android:orientation="horizontal">
 
         <TextView
@@ -22,8 +23,7 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
-            android:text="Height Scale"
+            android:text="Height"
             android:textColor="@color/white"
             android:textSize="22sp" />
 
@@ -36,8 +36,7 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
-            android:text="Weight Scale"
+            android:text="Weight"
             android:textColor="@color/white"
             android:textSize="22sp" />
 
@@ -50,11 +49,9 @@
             android:layout_weight="1.5"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="Pulse Oximeter"
             android:textColor="@color/white"
             android:textSize="22sp" />
-
 
         <TextView
             android:id="@+id/tv_header_bloodpressure"
@@ -65,7 +62,6 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="BP Monitor"
             android:textColor="@color/white"
             android:textSize="22sp" />
@@ -79,7 +75,6 @@
             android:layout_weight="1"
             android:background="@color/orange4"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="Temperature"
             android:textColor="@color/white"
             android:textSize="22sp" />
@@ -100,7 +95,7 @@
 
 
         <TextView
-            android:id="@+id/tv_header_bloodsugar"
+            android:id="@+id/tv_header_sugar"
             android:layout_width="0dip"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -108,10 +103,9 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
-            android:text="Blood Sugar"
+            android:text="Sugar"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="22sp" />
 
         <TextView
             android:id="@+id/tv_header_hemoglobin"
@@ -122,7 +116,6 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="Hemoglobin"
             android:textColor="@color/white"
             android:textSize="22sp" />
@@ -140,57 +133,57 @@
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad10"
             android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:gravity="center"
-            android:text="Name : Ashok Songara"
             android:textColor="@color/white"
-            android:textSize="22sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_age"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad10"
             android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:gravity="center"
-            android:text="Age : 24"
             android:textColor="@color/white"
-            android:textSize="22sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_gender"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad10"
             android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:gravity="center"
-            android:text="Gender : Male"
             android:textColor="@color/white"
-            android:textSize="22sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_mobile_number"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad10"
             android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:gravity="center"
-            android:text="Phone : 7984507908"
             android:textColor="@color/white"
-            android:textSize="22sp" />
-
+            android:textSize="18sp" />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@drawable/line" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -213,7 +206,7 @@
             <Button
                 android:id="@+id/btn_connect_temperature"
                 android:layout_width="150dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_margin="5dp"
                 android:layout_weight="0"
                 android:background="@drawable/grayback"
@@ -343,7 +336,7 @@
         <Button
             android:id="@+id/btn_skip"
             android:layout_width="650dp"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:layout_below="@+id/checkBox"
             android:layout_gravity="center"
             android:layout_marginTop="100dp"
@@ -351,7 +344,7 @@
             android:gravity="center"
             android:text="Next"
             android:textColor="@color/white"
-            android:textSize="25sp"
+            android:textSize="22sp"
             android:visibility="visible" />
 
     </LinearLayout>
