--- a/app/src/main/res/layout/activity_pulse_oximeter_main.xml
+++ b/app/src/main/res/layout/activity_pulse_oximeter_main.xml
@@ -10,82 +10,78 @@
     android:weightSum="3"
     tools:context=".oximeter.MainActivity">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
+        android:layout_weight="0.1"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_header_height"
             android:layout_width="0dip"
-            android:layout_weight="1"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
-            android:text="Height Scale"
+            android:text="Height"
             android:textColor="@color/white"
-            android:textSize="22sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_header_weight"
             android:layout_width="0dip"
-            android:layout_weight="1"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
-            android:text="Weight Scale"
+            android:text="Weight"
             android:textColor="@color/white"
-            android:textSize="22sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_header_pulseoximeter"
             android:layout_width="0dip"
-            android:layout_weight="1.5"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
-            android:background="@color/orange4"
+            android:layout_weight="1.5"
+            android:background="@drawable/repeat_orange"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="Pulse Oximeter"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_header_bloodpressure"
             android:layout_width="0dip"
-            android:layout_weight="1"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="BP Monitor"
             android:textColor="@color/white"
-            android:textSize="22sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_header_tempreture"
             android:layout_width="0dip"
-            android:layout_weight="1"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="Temperature"
             android:textColor="@color/white"
-            android:textSize="22sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_header_vision"
@@ -103,32 +99,30 @@
 
 
         <TextView
-            android:id="@+id/tv_header_hemoglobin"
-            android:layout_width="0dip"
-            android:layout_weight="1"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/pad5"
-            android:background="@drawable/repeat"
-            android:gravity="center"
-            android:padding="@dimen/pad5"
-            android:text="Blood Sugar"
-            android:textColor="@color/white"
-            android:textSize="22sp" />
-
-        <TextView
             android:id="@+id/tv_header_bloodsugar"
             android:layout_width="0dip"
-            android:layout_weight="1"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
+            android:text="Sugar"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_header_hemoglobin"
+            android:layout_width="0dip"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
+            android:background="@drawable/repeat"
+            android:gravity="center"
             android:text="Hemoglobin"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
@@ -143,55 +137,50 @@
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad10"
             android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:gravity="center"
-            android:text="Name : Ashok Songara"
             android:textColor="@color/white"
-            android:textSize="22sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_age"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad10"
             android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:gravity="center"
-            android:text="Age : 24"
             android:textColor="@color/white"
-            android:textSize="22sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_gender"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad10"
             android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:gravity="center"
-            android:text="Gender : Male"
             android:textColor="@color/white"
-            android:textSize="22sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_mobile_number"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad10"
             android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:gravity="center"
-            android:text="Phone : 7984507908"
             android:textColor="@color/white"
-            android:textSize="22sp" />
-
+            android:textSize="18sp" />
 
     </LinearLayout>
 
@@ -213,6 +202,12 @@
             android:src="@mipmap/applogo"
             android:visibility="gone" />
 
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@drawable/line" />
+
         <RelativeLayout
             android:id="@+id/rl_ConnectionStatusLayout"
             android:layout_width="match_parent"
@@ -224,11 +219,11 @@
             <Button
                 android:id="@+id/btn_connect"
                 android:layout_width="150dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_alignParentRight="true"
                 android:layout_margin="5dp"
                 android:background="@drawable/repeat"
-                android:padding="@dimen/pad15"
+                android:padding="@dimen/pad5"
                 android:text="Connecting..."
                 android:textColor="@color/white" />
         </RelativeLayout>
@@ -426,15 +421,14 @@
             <Button
                 android:id="@+id/btn_Next"
                 android:layout_width="650dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:background="@drawable/repeat"
                 android:gravity="center"
                 android:text="Skip"
                 android:textColor="@color/white"
-                android:textSize="25sp"
-                android:textStyle="bold" />
+                android:textSize="22sp" />
 
         </LinearLayout>
     </LinearLayout>
