--- a/app/src/main/res/layout/activity_vision.xml
+++ b/app/src/main/res/layout/activity_vision.xml
@@ -9,116 +9,11 @@
     android:weightSum="3"
     tools:context=".activity.VisionActivity">
 
-    <!--    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="0.1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_header_weight"
-                android:layout_width="120dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/pad5"
-                android:background="@drawable/repeat"
-                android:gravity="center"
-                android:text="Height"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/tv_header_height"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/pad5"
-                android:background="@drawable/repeat"
-                android:gravity="center"
-                android:text="Weight"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/tv_header_pulseoximeter"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/pad5"
-                android:background="@drawable/repeat"
-                android:gravity="center"
-                android:text="SpO2"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/tv_header_bloodpressure"
-                android:layout_width="140dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/pad5"
-                android:background="@drawable/repeat"
-                android:gravity="center"
-                android:text="BP Monitor"
-                android:textColor="@color/white"
-                android:textSize="22sp" />
-
-            <TextView
-                android:id="@+id/tv_header_tempreture"
-                android:layout_width="150dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/pad5"
-                android:background="@drawable/repeat"
-                android:gravity="center"
-                android:text="Temperature"
-                android:textColor="@color/white"
-                android:textSize="22sp" />
-
-            <TextView
-                android:id="@+id/tv_header_vision"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
-                android:background="@drawable/repeat"
-                android:gravity="center"
-                android:padding="@dimen/pad10"
-                android:text="Vision"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/tv_header_bloodsugar"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/pad5"
-                android:background="@drawable/repeat"
-                android:gravity="center"
-                android:text="Sugar"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/tv_header_hemoglobin"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/pad5"
-                android:background="@drawable/repeat"
-                android:gravity="center"
-                android:text="Hemoglobin"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
-
-        </LinearLayout>-->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_weight="0.1"
         android:orientation="horizontal">
 
         <TextView
@@ -130,8 +25,7 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
-            android:text="Height Scale"
+            android:text="Height"
             android:textColor="@color/white"
             android:textSize="22sp" />
 
@@ -144,8 +38,7 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
-            android:text="Weight Scale"
+            android:text="Weight"
             android:textColor="@color/white"
             android:textSize="22sp" />
 
@@ -172,7 +65,6 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="BP Monitor"
             android:textColor="@color/white"
             android:textSize="22sp" />
@@ -186,7 +78,6 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="Temperature"
             android:textColor="@color/white"
             android:textSize="22sp" />
@@ -198,16 +89,14 @@
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
             android:layout_weight="1"
-            android:background="@color/orange4"
+            android:background="@drawable/repeat_orange"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="Vision"
             android:textColor="@color/white"
             android:textSize="22sp" />
 
-
         <TextView
-            android:id="@+id/tv_header_bloodsugar"
+            android:id="@+id/tv_header_sugar"
             android:layout_width="0dip"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -215,44 +104,133 @@
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
-            android:text="Blood Sugar"
+            android:text="Sugar"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="22sp" />
 
         <TextView
             android:id="@+id/tv_header_hemoglobin"
             android:layout_width="0dip"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
             android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad5"
             android:text="Hemoglobin"
             android:textColor="@color/white"
             android:textSize="22sp" />
 
     </LinearLayout>
 
-    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/pager"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="2.5"
-        android:visibility="visible" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="4">
 
-    <include
-        android:id="@+id/layout_result"
-        layout="@layout/layout_vision_result"
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/pad10"
+            android:layout_weight="1"
+            android:background="@drawable/rectangle"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_age"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/pad10"
+            android:layout_weight="1"
+            android:background="@drawable/rectangle"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_gender"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/pad10"
+            android:layout_weight="1"
+            android:background="@drawable/rectangle"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_mobile_number"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/pad10"
+            android:layout_weight="1"
+            android:background="@drawable/rectangle"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@drawable/line" />
+
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="2.5"
-        android:visibility="gone" />
+        android:orientation="horizontal"
+        android:visibility="visible">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/iv_left_arrow"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
+
+        <ImageView
+            android:id="@+id/iv_right_arrow"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
+
+        <include
+            android:id="@+id/layout_result"
+            layout="@layout/layout_vision_result"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="40dp"
+            android:layout_weight="2.5"
+            android:visibility="gone" />
+    </RelativeLayout>
 
 
     <LinearLayout
+        android:id="@+id/layout_buttons"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
@@ -261,41 +239,46 @@
         android:layout_weight="0.5"
         android:gravity="center"
         android:orientation="horizontal"
+        android:visibility="visible"
         android:weightSum="2">
 
         <LinearLayout
+            android:id="@+id/layout_btn_finish"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_weight="0.7">
+            android:layout_weight="1"
+            android:visibility="visible">
 
             <Button
                 android:id="@+id/btn_finish"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_margin="15dp"
                 android:background="@drawable/repeat"
                 android:text="Finish"
                 android:textColor="@color/white"
-                android:textSize="25sp" />
+                android:textSize="22sp"
+                android:visibility="visible" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout_btn_skip"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_weight="0.7">
+            android:layout_weight="1">
 
             <Button
                 android:id="@+id/btn_skip"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_margin="15dp"
                 android:background="@drawable/repeat"
                 android:text="Skip"
                 android:textColor="@color/white"
-                android:textSize="25sp" />
+                android:textSize="22sp" />
 
         </LinearLayout>
 
