--- a/app/src/main/res/layout/actofit_main_activity.xml
+++ b/app/src/main/res/layout/actofit_main_activity.xml
@@ -18,12 +18,12 @@
             android:layout_weight="2"
             android:orientation="vertical">
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="2"
-                android:gravity="center"
+                android:layout_weight="0.1"
                 android:orientation="horizontal">
 
                 <TextView
@@ -35,8 +35,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
-                    android:text="Height Scale"
+                    android:text="Height"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
 
@@ -49,8 +48,7 @@
                     android:layout_weight="1"
                     android:background="@color/orange4"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
-                    android:text="Weight Scale"
+                    android:text="Weight"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
 
@@ -63,7 +61,6 @@
                     android:layout_weight="1.5"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
                     android:text="Pulse Oximeter"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
@@ -77,7 +74,6 @@
                     android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
                     android:text="BP Monitor"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
@@ -91,7 +87,6 @@
                     android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
                     android:text="Temperature"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
@@ -110,19 +105,6 @@
                     android:textColor="@color/white"
                     android:textSize="22sp" />
 
-                <TextView
-                    android:id="@+id/tv_header_bloodsugar"
-                    android:layout_width="0dip"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad5"
-                    android:layout_weight="1"
-                    android:background="@drawable/repeat"
-                    android:gravity="center"
-                    android:padding="@dimen/pad5"
-                    android:text="Blood Sugar"
-                    android:textColor="@color/white"
-                    android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/tv_header_hemoglobin"
@@ -133,7 +115,19 @@
                     android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
+                    android:text="Sugar"
+                    android:textColor="@color/white"
+                    android:textSize="22sp" />
+
+                <TextView
+                    android:layout_width="0dip"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
+
+                    android:background="@drawable/repeat"
+                    android:gravity="center"
                     android:text="Hemoglobin"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
@@ -144,7 +138,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="2"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="4">
@@ -152,55 +145,50 @@
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad5"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
-                    android:text="Name : Ashok Songara"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_age"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad5"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
-                    android:text="Age : 24"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_gender"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad5"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
-                    android:text="Gender : Male"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_mobile_number"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad5"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
-                    android:text="Phone : 7984507908"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
-
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
@@ -211,6 +199,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@drawable/line" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -503,13 +496,13 @@
                 <Button
                     android:id="@+id/btn_smart_scale"
                     android:layout_width="300dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="40dp"
                     android:background="@drawable/round_btn_small"
                     android:text="Go To Smartscale"
                     android:textColor="@color/white"
-                    android:textSize="30sp"
+                    android:textSize="18sp"
                     app:layout_constraintTop_toBottomOf="@+id/liner5_editpro"
 
                     />
@@ -527,7 +520,7 @@
                     <Button
                         android:id="@+id/btn_skip"
                         android:layout_width="650dp"
-                        android:layout_height="50dp"
+                        android:layout_height="40dp"
                         android:layout_margin="10dp"
                         android:layout_weight=".6"
                         android:background="@drawable/repeat"
@@ -535,9 +528,7 @@
                         android:gravity="center"
                         android:text="Skip"
                         android:textColor="@color/white"
-                        android:textSize="25sp"
-                        android:textStyle="bold" />
-
+                        android:textSize="22sp" />
 
                 </LinearLayout>
 
