--- a/app/src/main/res/layout/layout_blood_pressure.xml
+++ b/app/src/main/res/layout/layout_blood_pressure.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <TextView
@@ -27,8 +28,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
-                android:padding="@dimen/pad5"
-                android:text="Height Scale"
+                android:text="Height"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
 
@@ -41,8 +41,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
-                android:padding="@dimen/pad5"
-                android:text="Weight Scale"
+                android:text="Weight"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
 
@@ -55,7 +54,6 @@
                 android:layout_weight="1.5"
                 android:background="@drawable/repeat"
                 android:gravity="center"
-                android:padding="@dimen/pad5"
                 android:text="Pulse Oximeter"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
@@ -69,7 +67,6 @@
                 android:layout_weight="1"
                 android:background="@color/orange4"
                 android:gravity="center"
-                android:padding="@dimen/pad5"
                 android:text="BP Monitor"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
@@ -83,7 +80,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
-                android:padding="@dimen/pad5"
                 android:text="Temperature"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
@@ -102,19 +98,6 @@
                 android:textColor="@color/white"
                 android:textSize="22sp" />
 
-            <TextView
-                android:id="@+id/tv_header_hemoglobin"
-                android:layout_width="0dip"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/pad5"
-                android:layout_weight="1"
-                android:background="@drawable/repeat"
-                android:gravity="center"
-                android:padding="@dimen/pad5"
-                android:text="Blood Sugar"
-                android:textColor="@color/white"
-                android:textSize="22sp" />
 
             <TextView
                 android:id="@+id/tv_header_bloodsugar"
@@ -125,7 +108,19 @@
                 android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
-                android:padding="@dimen/pad5"
+                android:text="Sugar"
+                android:textColor="@color/white"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/tv_header_hemoglobin"
+                android:layout_width="0dip"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
+                android:background="@drawable/repeat"
+                android:gravity="center"
                 android:text="Hemoglobin"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
@@ -136,6 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:weightSum="4">
@@ -143,54 +139,50 @@
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/pad10"
                 android:layout_weight="1"
                 android:background="@drawable/rectangle"
                 android:gravity="center"
-                android:text="Name : Ashok Songara"
                 android:textColor="@color/white"
-                android:textSize="22sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/tv_age"
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/pad10"
                 android:layout_weight="1"
                 android:background="@drawable/rectangle"
                 android:gravity="center"
-                android:text="Age : 24"
                 android:textColor="@color/white"
-                android:textSize="22sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/tv_gender"
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/pad10"
                 android:layout_weight="1"
                 android:background="@drawable/rectangle"
                 android:gravity="center"
-                android:text="Gender : Male"
                 android:textColor="@color/white"
-                android:textSize="22sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/tv_mobile_number"
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/pad10"
                 android:layout_weight="1"
                 android:background="@drawable/rectangle"
                 android:gravity="center"
-                android:text="Phone : 7984507908"
                 android:textColor="@color/white"
-                android:textSize="22sp" />
+                android:textSize="18sp" />
 
         </LinearLayout>
 
@@ -205,6 +197,11 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:visibility="visible">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@drawable/line" />
 
                 <ScrollView
                     android:layout_width="match_parent"
@@ -283,7 +280,7 @@
                         <Button
                             android:id="@+id/btn_skip"
                             android:layout_width="650dp"
-                            android:layout_height="50dp"
+                            android:layout_height="40dp"
                             android:layout_centerHorizontal="true"
                             android:layout_gravity="center"
                             android:layout_marginLeft="10dp"
@@ -294,7 +291,7 @@
                             android:gravity="center"
                             android:text="Skip"
                             android:textColor="@color/white"
-                            android:textSize="25sp"
+                            android:textSize="22sp"
                             android:textStyle="bold" />
 
                     </LinearLayout>
