--- a/app/src/main/res/layout/layout_display_record_screen.xml
+++ b/app/src/main/res/layout/layout_display_record_screen.xml
@@ -7,8 +7,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,43 +19,43 @@
                 android:layout_width="200dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
+                android:padding="@dimen/pad10"
                 android:src="@mipmap/applogo"
                 android:visibility="gone" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="2"
-                android:gravity="center"
+                android:layout_weight="0.1"
                 android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_header_height"
-                    android:layout_width="0dip"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad5"
-                    android:layout_weight="1"
-                    android:background="@drawable/repeat"
-                    android:gravity="center"
-                    android:padding="@dimen/pad5"
-                    android:text="Height Scale"
-                    android:textColor="@color/white"
-                    android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/tv_header_weight"
                     android:layout_width="0dip"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
+                    android:layout_margin="@dimen/pad5"
                     android:layout_weight="1"
-                    android:background="@color/orange4"
+                    android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
+                    android:text="Height"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/tv_header_height"
+                    android:layout_width="0dip"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
+                    android:background="@drawable/repeat_orange"
+                    android:gravity="center"
                     android:text="Weight Scale"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_header_pulseoximeter"
@@ -81,10 +80,9 @@
                     android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
                     android:text="BP Monitor"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_header_tempreture"
@@ -95,24 +93,9 @@
                     android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
                     android:text="Temperature"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
-
-                <TextView
-                    android:id="@+id/tv_header_vision"
-                    android:layout_width="0dip"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad5"
-                    android:layout_weight="1"
-                    android:background="@drawable/repeat"
-                    android:gravity="center"
-                    android:padding="@dimen/pad5"
-                    android:text="Vision"
-                    android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_header_bloodsugar"
@@ -123,10 +106,9 @@
                     android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
-                    android:text="Blood Sugar"
+                    android:text="Vision"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_header_hemoglobin"
@@ -137,10 +119,21 @@
                     android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
-                    android:padding="@dimen/pad5"
+                    android:text="Sugar"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:layout_width="0dip"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
+                    android:background="@drawable/repeat"
+                    android:gravity="center"
                     android:text="Hemoglobin"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
@@ -148,7 +141,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="2"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="4">
@@ -156,63 +148,56 @@
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad10"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
-                    android:text="Name : Ashok Songara"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_age"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad10"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
-                    android:text="Age : 24"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_gender"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad10"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
-                    android:text="Gender : Male"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_mobile_number"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/pad10"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
-                    android:text="Phone : 7984507908"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
-
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:background="@color/transparent"
                 android:orientation="horizontal"
                 android:weightSum="3">
@@ -309,9 +294,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
                 android:orientation="horizontal"
                 android:weightSum="3">
 
@@ -408,9 +391,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
                 android:orientation="horizontal"
                 android:weightSum="3">
 
@@ -504,9 +485,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
                 android:orientation="horizontal"
                 android:weightSum="3">
 
@@ -601,9 +580,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
                 android:orientation="horizontal"
                 android:weightSum="3">
 
