--- a/app/src/main/res/layout/layout_vision_result.xml
+++ b/app/src/main/res/layout/layout_vision_result.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_result"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:background="@drawable/background"
     android:orientation="vertical">
 
@@ -13,13 +14,15 @@
         android:text="@string/result_txt"
         android:textColor="@color/white"
         android:textSize="35sp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="70dp"
+
         android:weightSum="2">
         <LinearLayout
             android:layout_width="0dp"
@@ -34,7 +37,7 @@
                 android:textSize="25sp"
                 android:textColor="@color/white"
                 android:layout_margin="15dp"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center"
                 android:text="Left Vision -"/>
 
         </LinearLayout>
@@ -42,6 +45,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_gravity="center_vertical"
             android:layout_marginRight="30dp"
             android:gravity="center"
             android:layout_weight="0.5">
@@ -53,14 +57,16 @@
                 android:textColor="@color/white"
                 android:layout_margin="15dp"
                 android:padding="15dp"
+                android:gravity="center"
                 android:background="@drawable/rectangle"
-                android:text=""/>
+                android:text="result"/>
 
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="70dp"
         android:weightSum="2">
         <LinearLayout
             android:layout_width="0dp"
@@ -75,7 +81,7 @@
                 android:textSize="25sp"
                 android:textColor="@color/white"
                 android:layout_margin="15dp"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center"
                 android:text="Right Vision -"/>
 
         </LinearLayout>
@@ -83,6 +89,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_gravity="center_vertical"
             android:layout_marginRight="30dp"
             android:gravity="center"
             android:layout_weight="0.5">
@@ -94,8 +101,9 @@
                 android:textColor="@color/white"
                 android:layout_margin="15dp"
                 android:padding="15dp"
+                android:gravity="center"
                 android:background="@drawable/rectangle"
-                android:text=""/>
+                android:text="result"/>
 
         </LinearLayout>
     </LinearLayout>
@@ -103,8 +111,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="40dp"
         android:layout_gravity="center"
+        android:layout_marginTop="40dp"
         android:gravity="center">
         <Button
             android:id="@+id/btn_next"
@@ -115,7 +123,7 @@
             android:text="Next"
             android:textSize="22sp"
             android:textColor="@color/white"
-            android:layout_margin="20dp"/>
+            android:layout_margin="15dp"/>
     </LinearLayout>
 
 </LinearLayout>
