--- a/app/src/main/res/layout/new_try_hemoglobin.xml
+++ b/app/src/main/res/layout/new_try_hemoglobin.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <TextView
@@ -28,8 +29,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
-                android:padding="@dimen/pad5"
-                android:text="Height Scale"
+                android:text="Height"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
 
@@ -42,8 +42,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
-                android:padding="@dimen/pad5"
-                android:text="Weight Scale"
+                android:text="Weight"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
 
@@ -56,7 +55,6 @@
                 android:layout_weight="1.5"
                 android:background="@drawable/repeat"
                 android:gravity="center"
-                android:padding="@dimen/pad5"
                 android:text="Pulse Oximeter"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
@@ -70,7 +68,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
-                android:padding="@dimen/pad5"
                 android:text="BP Monitor"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
@@ -84,7 +81,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
-                android:padding="@dimen/pad5"
                 android:text="Temperature"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
@@ -104,7 +100,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/tv_header_bloodsugar"
+                android:id="@+id/tv_header_sugar"
                 android:layout_width="0dip"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -112,8 +108,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
-                android:padding="@dimen/pad5"
-                android:text="Blood Sugar"
+                android:text="Sugar"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
 
@@ -126,10 +121,9 @@
                 android:layout_weight="1"
                 android:background="@color/orange4"
                 android:gravity="center"
-                android:padding="@dimen/pad5"
                 android:text="Hemoglobin"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="22sp" />
 
         </LinearLayout>
 
@@ -137,6 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:weightSum="4">
@@ -144,55 +139,50 @@
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/pad10"
                 android:layout_weight="1"
                 android:background="@drawable/rectangle"
                 android:gravity="center"
-                android:text="Name : Ashok Songara"
                 android:textColor="@color/white"
-                android:textSize="22sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/tv_age"
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/pad10"
                 android:layout_weight="1"
                 android:background="@drawable/rectangle"
                 android:gravity="center"
-                android:text="Age : 24"
                 android:textColor="@color/white"
-                android:textSize="22sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/tv_gender"
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/pad10"
                 android:layout_weight="1"
                 android:background="@drawable/rectangle"
                 android:gravity="center"
-                android:text="Gender : Male"
                 android:textColor="@color/white"
-                android:textSize="22sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/tv_mobile_number"
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/pad10"
                 android:layout_weight="1"
                 android:background="@drawable/rectangle"
                 android:gravity="center"
-                android:text="Phone : 7984507908"
                 android:textColor="@color/white"
-                android:textSize="22sp" />
-
+                android:textSize="18sp" />
 
         </LinearLayout>
 
